Fix: remove visible focus from main content

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -29,6 +29,10 @@
   top: 1rem;
 }
 
+main:focus {
+    outline: none;
+}
+
 header {
     text-align: center;
     margin-bottom: 0;
